# todo-test

./: .gitignore  docker-compose.yml  pyproject.toml
api/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
api/todoproject/: settings.py  urls.py
api/todos/: models.py  serializers.py  tests.py  views.py
api/todos/migrations/: 0002_auto_20200919_1745.py  0003_auto_20200919_1746.py
front/: .babelrc  .gitignore  Dockerfile  package-lock.json  package.json
front/public/: index.html
front/src/: api.js  auth.js  index.js  routes.js  style.js
front/src/components/: App.js  AppBar.js  Intro.js  Login.js  Register.js  Todos.js  index.js
front/src/routers/: PrivateRoute.js  PublicRoute.js
todo/: settings.py
todoproject/: asgi.py  settings.py  urls.py  wsgi.py
todos/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
todos/migrations/: 0001_initial.py
